# vhost-user-wireguard

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/notepads/vhost-user-wireguard/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: vhost-user-wireguard.md
docs/: architecture.md  operations.md  threat-model.md
examples/: example-vm-inline-keys.toml  example-vm.toml  vm-with-embedded-config.xml
packaging/libvirt-hook/: qemu
packaging/libvirt-hook/qemu.d/: vhost-user-wg
packaging/systemd/: vhost-user-wg@.service
src/: error.rs  lib.rs  main.rs
src/arp/: mod.rs
src/config/: cli.rs  mod.rs  toml.rs  validate.rs
src/datapath/: intercept.rs  mod.rs  vnet.rs  vring.rs
src/dhcp/: lease.rs  mod.rs  options.rs  persist.rs
src/ops/: caps.rs  logging.rs  mod.rs  systemd.rs
src/wg/: keys.rs  mod.rs  peer.rs  routing.rs  uring.rs
src/wire/: arp.rs  eth.rs  icmp.rs  ipv4.rs  mod.rs  udp.rs
tests/: integration_arp.rs  integration_dhcp.rs  integration_sec.rs  integration_smoke.rs  integration_wg.rs
tests/common/: mod.rs
